--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,5 @@
     "RefreshRate": 3141,
     "Language": "English",
     "Messages": "Hello there, this text is from config store",
-    "BackgroundColor": "Red"
+    "BackgroundColor": "Orange"
 }
