--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,6 @@
     "FontSize": 50,
     "RefreshRate": 3141,
     "Language": "English",
-    "Messages": "Hello there, this text is from config store",
-    "BackgroundColor": "Blue"
+    "Messages": "Hello there, have a nice day!",
+    "BackgroundColor": "Light Blue"
 }
