change message and color

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,6 @@
     "FontSize": 50,
     "RefreshRate": 3141,
     "Language": "English",
-    "Messages": "Hello there, have a nice day!",
-    "BackgroundColor": "Light Blue"
+    "Messages": "Hi there, have a nice day!",
+    "BackgroundColor": "LightBlue"
 }
