Revert "change color"

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,5 @@
     "RefreshRate": 3141,
     "Language": "English",
     "Messages": "Hi there, have a nice day!",
-    "BackgroundColor": "LightGreen"
+    "BackgroundColor": "LightBlue"
 }
