--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,6 @@
     "FontSize": 50,
     "RefreshRate": 3141,
     "Language": "English",
-    "Messages": "Hi there, have a nice day!",
+    "Messages": "Hi there, this is a demon!",
     "BackgroundColor": "LightBlue"
 }
