--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,6 @@
     "FontSize": 50,
     "RefreshRate": 3141,
     "Language": "English",
+    "Messages": "Hi there, have a nice day!",
     "BackgroundColor": "LightBlue"
 }
