Add spring config

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
     "AppName": "ConfigStoreDemo",
     "Version": 2.0,
     "FontSize": 50,
-    "RefreshRate": 3141,
+    "RefreshRate": 1500,
     "Language": "English",
-    "Messages": "Hi there, this is a demon!",
-    "BackgroundColor": "LightBlue"
+    "Messages": "Hi there,; have a nice day!",
+    "BackgroundColor": "Orange"
 }
