--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,18 @@
-{
+﻿{
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+
+  "Settings": {
     "AppName": "ConfigStoreDemo",
-    "Version": 2.0,
+    "Version": 1.0,
     "FontSize": 50,
     "RefreshRate": 1500,
     "Language": "English",
     "Messages": "Hi there, have a nice day!",
-    "BackgroundColor": "LightBlue"
+    "BackgroundColor": "Lightgreen"
+  }
 }
